<?xml version="1.0"?>
<package format="2">
  <name>ad_target_path_planner</name>
  <version>0.0.0</version>
  <description>The ad_target_path_planner package</description>
  <maintainer email="amsl@todo.todo">Iwamura Yuuka</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  
</package>
