<?xml version="1.0"?>
<package format="2">
  <name>glocal_path_planner</name>
  <version>0.0.0</version>
  <description>The glocal_path_planner package</description>
  <maintainer email="user@todo.todo">Iwamura Yuuka</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>pedestrian_msgs</depend>

</package>