<?xml version="1.0"?>
<package format="2">
  <name>spaciss_obs_map_creator</name>
  <version>0.0.0</version>
  <description>The spaciss_obs_map_creator package</description>
  <maintainer email="user@todo.todo">Iwamura Yuuka</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>pedestrian_msgs</depend>

</package>
